# secure-iot-esp32

./: README.md
doc/: key_exchange.wsd  message_exchange.wsd  mqtt-encryption-protocol.md
esp32-firmware/: Cargo.toml
firmware/main/: led.cpp  led.h  local_netowrk.cpp  local_network.h  main.ino  mqtt_client.cpp  mqtt_client.h  oled.cpp  oled.h  secure_crypto.cpp  secure_crypto.h  secure_mqtt.cpp  secure_mqtt.h  sensor.cpp  sensor.h
kms/: .env  crypto_utils.py  fastapi_server.py  kms.py  kms_event_bus.py  kms_server.py  provision_esp.py  requirements.txt  test.py  webserver_utils.py
kms/web/: app.js  index.html  styles.css
mqtt-secure-sim/: README.md  client.py  crypto_utils.py  demo.py  kms.py  kms_server.py  requirements.txt
server/mqtt/: README.md  pyproject.toml  requirements.txt
server/mqtt/secure_iot_broker/: __main__.py
server/mqtt/secure_iot_broker/plugins/: print_plugin.py
